聊天室v2版本 authored by sunshixun